cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
#add_definitions(-std=c++11)
#add_definitions(-lstdc+)
#add_definitions(-Wall)
set(CMAKE_CXX_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++ -lrt -lpthread -ldl -std=c++11")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++ -lrt -lpthread -ldl -std=c++11")
add_definitions(${CMAKE_CXX_FLAGS})
add_definitions(${CMAKE_EXE_LINKER_FLAGS})

include_directories(core/include)
include_directories(containers/include)
include_directories(util/include)

file(GLOB SOURCES "core/src/*.cpp" "util/src/*.cpp" "*.cpp")
#file(GLOB SOURCES "core/src/*.cpp" "util/src/*.cpp")
project (Framework)
#ADD_LIBRARY(framework STATIC ${SOURCES})
add_executable(Framework ${SOURCES})
